--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,8 @@ h1 {
   margin: 1rem;
 }
 
-#btn {
+#btnSort,
+#btnReset {
   margin-bottom: 2rem;
   font-family: Calibri, sans-serif;
   padding: 0.5rem 1rem;
@@ -48,6 +49,8 @@ h1 {
   cursor: pointer;
 }
 
-#btn:hover {
+#btnSort:hover,
+#btnReset:hover
+{
   box-shadow: lightgray 2px 2px 10px;
 }
