--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,35 @@ main {
   min-height: 95vh;
 }
 
+h1 {
+  margin: 1rem;
+}
+
+.buttons {
+  width: 80vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 2rem 0;
+}
+
+#btnSort,
+#btnReset,
+#speed {
+  font-family: Calibri, sans-serif;
+  padding: 0.5rem 1rem;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+#btnSort:hover,
+#btnReset:hover
+{
+  box-shadow: lightgray 2px 2px 10px;
+}
+
 #box {
   box-sizing:content-box;
   width: 80vw;
@@ -28,29 +57,8 @@ main {
   text-align: center;
 }
 
-label {
+.itemLabel {
   position: relative;
   top: -20px;
-
-}
-
-h1 {
-  margin: 1rem;
-}
-
-#btnSort,
-#btnReset {
-  margin-bottom: 2rem;
-  font-family: Calibri, sans-serif;
-  padding: 0.5rem 1rem;
   background-color: white;
-  border: 2px solid black;
-  border-radius: 2px;
-  cursor: pointer;
-}
-
-#btnSort:hover,
-#btnReset:hover
-{
-  box-shadow: lightgray 2px 2px 10px;
 }
