--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: Calibri, sans-serif;
+  background-color: #fefefe;
 }
 
 main {
@@ -8,6 +9,8 @@ main {
   justify-content: center;
   align-items: center;
   min-height: 95vh;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 h1 {
@@ -16,44 +19,47 @@ h1 {
 
 .buttons {
   width: 80vw;
+  max-width: 600px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin: 2rem 0;
 }
-
 #btnSort,
 #btnReset,
 #speed {
   font-family: Calibri, sans-serif;
   padding: 0.5rem 1rem;
-  background-color: white;
-  border: 2px solid black;
+  background-color: #fefefe;
+  border: 2px solid #424141da;
   border-radius: 2px;
   cursor: pointer;
 }
 
 #btnSort:hover,
-#btnReset:hover
+#btnReset:hover,
+#speed:hover
 {
-  box-shadow: lightgray 2px 2px 10px;
+  box-shadow: #7977779d 0 0 5px;
 }
 
 #box {
   box-sizing:content-box;
   width: 80vw;
+  max-width: 600px;
   height: 50vh;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 2px;
   display: flex;
   flex-flow: row nowrap;
   align-items: flex-end;
+  box-shadow: 0 0 5px #7977779d;
 }
 
 .item {
   width: 5%;
   margin: 0 2px;
-  background-color: red;
+  background-color: #e44141de;
   text-align: center;
 }
 
